# rust-forge-skill

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  deny.toml
.github/: dependabot.yml
checklists/: code-review-checklist.md  project-start-checklist.md  release-checklist.md  security-review-checklist.md
ci/: github-actions-rust-security.yml  github-actions-rust.yml  self-test.yml
examples/agent-prompts/: load-rust-forge-skill.md  refactor-library.md  scaffold-api.md  scaffold-cli.md  unsafe-audit.md
guides/: 00-agent-operating-model.md  01-project-architecture.md  02-crate-workspace-patterns.md  03-error-handling-anyhow-thiserror.md  04-async-tokio-axum.md  05-cli-clap-tracing.md  06-testing-bench-fuzz.md  07-ffi-c-cpp.md  08-security-unsafe-audit.md  09-wasm-module-patterns.md  10-release-ci-msrv.md  11-performance-profiling.md  12-rust-anti-patterns.md
mcp/: README.md  agent-loader-instructions.md  manifest.example.json  tool-contract.md
reports/: FINAL_AUDIT_0_1_0.md  SELF_TEST_PLAN.md
scripts/: README.md  audit_unsafe.sh  check_msrv.sh  generate_cargo_workspace.sh  run-self-tests.sh  validate-self-test-report.sh  validate_rust_project.sh
self-tests/: README.md
self-tests/expected-reports/: 01-cli-report-shape.md  02-api-report-shape.md  03-refactor-report-shape.md  04-unsafe-audit-report-shape.md  05-workspace-report-shape.md
self-tests/scenarios/: 01-scaffold-cli.md  02-scaffold-axum-api.md  03-refactor-bad-library.md  04-audit-unsafe-ffi.md  05-create-workspace-service.md
templates/axum-api/: .clippy.toml  .gitignore  AGENT_NOTES.md  Cargo.toml  README.md  rustfmt.toml
templates/axum-api/src/: app.rs  config.rs  error.rs  main.rs  state.rs
templates/axum-api/src/http/: mod.rs  routes.rs
templates/axum-api/templates/ffi-wrapper/src-c/: lib.c  lib.h
templates/axum-api/tests/: health.rs
templates/cli-app/: .gitignore  AGENT_NOTES.md  Cargo.toml  README.md
templates/cli-app/src/: cli.rs  config.rs  main.rs
templates/cli-app/src/commands/: doctor.rs  echo.rs  mod.rs
templates/cli-app/tests/: cli_smoke.rs
templates/ffi-wrapper/: .clippy.toml  .gitignore  AGENT_NOTES.md  Cargo.toml  README.md  build.rs
templates/ffi-wrapper/src/: error.rs  lib.rs  wrapper.rs
templates/ffi-wrapper/src-c/: lib.c  lib.h
templates/ffi-wrapper/tests/: basic.rs
templates/library-crate/: .clippy.toml  .gitignore  AGENT_NOTES.md  Cargo.toml  README.md
templates/library-crate/examples/: basic.rs
templates/library-crate/src/: error.rs  lib.rs  model.rs  service.rs
templates/library-crate/tests/: integration.rs
templates/wasm-module/: .clippy.toml  .gitignore  AGENT_NOTES.md  Cargo.toml  README.md
templates/wasm-module/src/: lib.rs  utils.rs
templates/wasm-module/tests/: browser_tests.rs
templates/wasm-module/web/: index.html
templates/workspace-service/: .clippy.toml  .gitignore  AGENT_NOTES.md  Cargo.toml  README.md
templates/workspace-service/crates/api/: Cargo.toml
templates/workspace-service/crates/api/src/: error.rs  handlers.rs  lib.rs  main.rs  routes.rs
templates/workspace-service/crates/client/: Cargo.toml
templates/workspace-service/crates/client/src/: client.rs  lib.rs
templates/workspace-service/crates/core/: Cargo.toml
templates/workspace-service/crates/core/src/: error.rs  lib.rs
templates/workspace-service/crates/core/src/domain/: mod.rs  models.rs
