[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal Axum API template without database"
authors = ["rust-forge-skill"]
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hyper = "1.5"
http = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0