[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "{{description}}"
authors = ["{{author}}"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0