[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "{{description}}"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.5"
rstest = "0.24"
serde_json = "1.0"