[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "WebAssembly module for {{description}}"
authors = ["{{author}}"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = true