[package]
name = "{{workspace_name}}"
version = "0.1.0"
edition = "2024"
description = "{{description}}"
authors = ["{{author}}"]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3