[package]
name = "{{workspace_name}}-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
{{workspace_name}}-core = { path = "../core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
hyper = "1.5"

[lib]
path = "src/lib.rs"