[package]
name = "{{workspace_name}}-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
{{workspace_name}}-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
reqwest = { version = "0.12", features = ["json"] }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.7"